update get All Method
